--- a/admin/images/skin.css
+++ b/admin/images/skin.css
@@ -222,3 +222,24 @@ a:visited {
 	list-style-type: none;
 	list-style-image: none;
 }
+.admintable{
+	margin-top:20px;
+	border:1px solid #AEDEF2;
+	border-collapse: collapse;
+}
+.admintable td{
+	color: #0066cc;
+	font-size:14px;
+	color:#05B;
+}
+.admintable th{
+   width: 671px;
+	color: #0066cc;
+	background-color: #eef6fe;
+	font-size:14px;
+	color:#05B;
+	border:1px solid #AEDEF2;
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorStr=#AEDEF2,endColorStr=ghostwhite);
+}
+
+
